Material preview not visible in selection list #78588

Closed
opened 2020-07-03 22:13:01 +02:00 by SABRI Salim · 11 comments

System Information
Operating system: Linux-5.4.0-7634-generic-x86_64-with-debian-bullseye-sid 64 Bits
Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.100

Blender Version
Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-07-02 22:21, hash: 5a13f682ee
Worked: version: 2.90.0 Alpha, branch: master, commit date: 2020-06-28 15:13, hash: b21ba5e579

Short description of error
Materials preview does not appear in "Browse material to be linked" list.
It should show up at the left edge of the list.

Screenshot from 2020-07-03 21-11-46.png

**System Information** Operating system: Linux-5.4.0-7634-generic-x86_64-with-debian-bullseye-sid 64 Bits Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.100 **Blender Version** Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-07-02 22:21, hash: `5a13f682ee` Worked: version: 2.90.0 Alpha, branch: master, commit date: 2020-06-28 15:13, hash: `b21ba5e579` **Short description of error** Materials preview does not appear in "Browse material to be linked" list. It should show up at the left edge of the list. ![Screenshot from 2020-07-03 21-11-46.png](https://archive.blender.org/developer/F8662183/Screenshot_from_2020-07-03_21-11-46.png)
Author

Added subscriber: @Dalkoom

Added subscriber: @Dalkoom
Ankit Meel changed title from Material Icons to Material preview not visible in selection list 2020-07-04 16:01:48 +02:00
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @ankitm

Added subscriber: @ankitm
Member

EDIT it seems to be introduced in a different commit from 937d89afba, so I'll make a new report about it

Error: Not freed memory blocks: 11, total unfreed memory 9.007629 MB
Data from SCE len: 128 0x600007764cf8
Data from SCE len: 528384 0x1203d6038
Data from SCE len: 3145728 0x126815038
Data from SCE len: 160 0x600003b35538
Data from SCE len: 786432 0x1217b4038
Data from SCE len: 196608 0x120458038
Data from SCE len: 49152 0x11fea4038
Data from SCE len: 12288 0x106ae3838
Data from SCE len: 3072 0x106a3c038
Data from SCE len: 320 0x124721338
Data from SCE len: 320 0x119b6d6d8

Just expand the list, and close it, and close blender.

EDIT it seems to be introduced in a different commit from 937d89afba, so I'll make a new report about it ```lines=2 Error: Not freed memory blocks: 11, total unfreed memory 9.007629 MB Data from SCE len: 128 0x600007764cf8 Data from SCE len: 528384 0x1203d6038 Data from SCE len: 3145728 0x126815038 Data from SCE len: 160 0x600003b35538 Data from SCE len: 786432 0x1217b4038 Data from SCE len: 196608 0x120458038 Data from SCE len: 49152 0x11fea4038 Data from SCE len: 12288 0x106ae3838 Data from SCE len: 3072 0x106a3c038 Data from SCE len: 320 0x124721338 Data from SCE len: 320 0x119b6d6d8 ``` Just expand the list, and close it, and close blender.
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Member

937d89afba is the first bad commit.
CC @JulianEisel
Ignore the memory leak comment though. I'll make a new report about it.

937d89afba is the first bad commit. CC @JulianEisel Ignore the memory leak comment though. I'll make a new report about it.

This issue was referenced by 8e97694c8a

This issue was referenced by 8e97694c8afe7d83cd388218165e878952412168
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Julian Eisel self-assigned this 2020-07-04 17:08:53 +02:00
Member

Note that the memory leaks also appear when opening the preview panel. I'd assume the leak comes from the scene from the preview .blend file.

Note that the memory leaks also appear when opening the preview panel. I'd assume the leak comes from the scene from the preview .blend file.
Member

bad commit: 3a59c184b9
got distracted while making the report..

bad commit: 3a59c184b9 got distracted while making the report..
Member

#78608 (Memory leak in Material properties: "Data from SCE")

#78608 (Memory leak in Material properties: "Data from SCE")
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#78588
No description provided.