Fix T78588: Material preview not visible in selection list

Logic to determine if the library icon should be used was too general.